--- a/tickets/requirements.txt
+++ b/tickets/requirements.txt
@@ -13,16 +13,20 @@ constantly==15.1.0
 cryptography==36.0.1
 daphne==3.0.2
 Django==4.0.2
+fpdf2==2.5.0
 hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
 msgpack==1.0.3
 oauthlib==3.2.0
+pdfrw==0.4
+Pillow==9.0.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pyOpenSSL==22.0.0
+qrcode==7.3.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 service-identity==21.1.0
